# noodle_code_foundry

./: .env  .envrc  .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
agent/: mcp.json  rules.md
agent/instructions/: commit-relevant.md  docs-update.md  motions-critic.md  motions-dispatch.md  motions-eval.md  motions-make.md  task-execute.md
notebooks/: README.md  data_visualization.ipynb  mathematical_concepts.ipynb  statistical_analysis.ipynb
scripts/: compile_notebooks.py  render_notebooks.sh
src/noodle_code_foundry/: __init__.py  main.py
zdocs/: .gitlab-ci.yml  README.md  SETUP_COMPLETE.md  config.toml
zdocs/.github/workflows/: deploy.yml
zdocs/content/: _index.md
zdocs/content/chapter1/: _index.md  section1.md
zdocs/content/chapter2/: _index.md  section2.md
zdocs/content/compiled_notebooks/: _index.md  data_visualization.md  mathematical_concepts.md  statistical_analysis.md
zdocs/themes/MATbook/: README.md  config.toml  theme.toml
zdocs/themes/MATbook/content/: _index.md
zdocs/themes/MATbook/content/chapter 2/: 2025-11-30-.md  2025-11-30-section 2.1.md  2025-11-30-section 2.3.md  _index.md
zdocs/themes/MATbook/content/documentation/: 2025-11-30-section 1.2.md  2025-11-30-section 1.3.md  README.md  _index.md
zdocs/themes/MATbook/sass/: _header.scss  _toc.scss  book.scss
zdocs/themes/MATbook/static/: mathjax.js
zdocs/themes/MATbook/static/css/: style.css  toc.css
zdocs/themes/MATbook/templates/: index.html  page.html  taxonomy_list.html  taxonomy_single.html
(+11 files in other folders)
