[project]
name = "noodle-code-foundry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matteo Bortolotto", email = "mbortolotto@fbk.eu" }
]
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.2",
]

[project.scripts]
noodle-code-foundry = "noodle_code_foundry:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
