[project]
name = "noodle-code-foundry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matteo Bortolotto", email = "mbortolotto@fbk.eu" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "papermill>=2.7.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[project.scripts]
noodle-code-foundry = "noodle_code_foundry:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
